# longbar

./: .gitignore  README.md  gen-dbus.sh  meson.build
src/: longbar.c  longbar.h  main.c  meson.build  wayland-event-source.c  wayland-event-source.h
src/dbus/: dbus-dispatch.c  dbus-dispatch.h  interface.xml  meson.build
src/modules/: clock-module.c  clock-module.h  taskbar-module.c  taskbar-module.h
src/protocol/: box-foreign-toplevel-management-unstable-v1.xml  meson.build
